2005-05-01  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-op.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h: Add option to seahorse_util_write_data_*
    to supress release of data.
	* libseahorse/seahorse-vfs-data.c: Fix problem with closing files
	hanging under certain circumstances.

2005-04-26  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-actions.c:
    * agent/seahorse-agent-cache.c:
    * agent/seahorse-agent-prompt.c:
    * agent/seahorse-agent.h: Add option in agent 'Authorize' window
    to turn of authorize prompting. 
    Patch by Adam Schreiber. Fixes bug #302112
    
2005-04-24  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-prompt.c: Keep agent window on top. 
    Patch by Adam Schreiber. Fixes bug #301842
    * libseahorse/Makefile.am: 
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-keyserver-control.c:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-server-source.h: Dialog for adding key servers
    in preferences, validate key server uris (bug #159918)
    
2005-04-23  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager-store.c: Fix strange gconf crasher.
    
2005-04-21  Bastien Nocera  <hadess@hadess.net>

    * libseahorse/Makefile.am: fix build when WITH_HKP isn't defined

2005-04-19  Nate Nielsen  <nielsen@memberwebs.com>

    * INSTALL:
    * configure.in:
    * data/seahorse.schemas.in: 
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-gpgmex-util.c: 
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-hkp-source.h:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h: HKP Key Server support (bug #172757)