@@ -6,7 +6,9 @@
     to supress release of data.
 	* libseahorse/seahorse-vfs-data.c: Fix problem with closing files
 	hanging under certain circumstances.
-
+    * libseahose/seahorse-hkp-source.c: Fix crasher problems when parsing a 
+    HKP key index. 
+    
 2005-04-26  Nate Nielsen  <nielsen@memberwebs.com>
 
     * agent/seahorse-agent-actions.c:
